5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4079/executions/1749_3090.log
== TEST (2019-05-15 19:30:24) 
-- CODE:
x=int(input("digite um numero: "))

n=0
while(x != 0):
	if(x<0)
	print("Abaixo")
else:
	print("Acima")
print()
-- ERROR:
File "XXXX", line 5
    if(x<0)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:30:40) 
-- CODE:
x=int(input("digite um numero: "))

n=0
while(x != 0):
	if(x < 0):
	print("Abaixo")
else:
	print("Acima")
print()
-- ERROR:
File "XXXX", line 6
    print("Abaixo")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:31:24) 
-- CODE:
x=int(input("digite um numero: "))

n=0
while(x != 0):
	if(x > 0):
	print("Abaixo")
else:
	print("Acima")
print()
-- ERROR:
File "XXXX", line 6
    print("Abaixo")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:31:39) 
-- CODE:
x=int(input("digite um numero: "))

n=0
while(x != 0):
	t=t+1
	if(x > 0):
	print("Abaixo")
else:
	print("Acima")
print()
-- ERROR:
File "XXXX", line 7
    print("Abaixo")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:31:59) 
-- CODE:
x=int(input("digite um numero: "))

n=0
while(x != 0):
	t=t+1
	if(x > 0):
	mensagem("Abaixo")
else:
	print("Acima")
print()
-- ERROR:
File "XXXX", line 7
    mensagem("Abaixo")
           ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 19:35:06) 
-- CODE:
x=int(input("digite um numero: "))

n=0
while(x != 0):
	t=t+1
if(x > 0):
	mensagem("Abaixo")
else:
	print("Acima")
print()
-- EXECUTION TIME:
0.168105
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1749/3090/main.py", line 5, in <module>
    t=t+1
NameError: name 't' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:35:08) 
-- CODE:
x=int(input("digite um numero: "))

n=0
while(x != 0):
	t=t+1
if(x > 0):
	mensagem("Abaixo")
else:
	print("Acima")
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    t=t+1
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:35:34) 
-- CODE:
x=int(input("digite um numero: "))

n=0
while(x != 0):
	n=n+1
if(x > 0):
	mensagem("Abaixo")
else:
	print("Acima")
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    t=t+1
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:36:15) 
-- CODE:
x=int(input("digite um numero: "))

n=0
while(x != 0):
	n=n+1
if(x > 0):
	mensagem("Abaixo")
else:
	print("Acima")
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    t=t+1
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:36:28) 
-- CODE:
x=int(input("digite um numero: "))

n=0
while(x != 0):
	n=n+1
if(x > 0):
	mensagem("Abaixo")
else:
	print("Acima")
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    t=t+1
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:36:37) 
-- CODE:
x=int(input("digite um numero: "))

n=0
while(x != 0):
	n=n+1
if(x > 0):
	mensagem("Abaixo")
else:
	print("Acima")
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    t=t+1
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:37:03) 
-- CODE:
x=int(input("digite um numero: "))

n=0
while(x != 0):
	n=n+3
if(x > 0):
	mensagem("Abaixo")
else:
	print("Acima")
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    t=t+1
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:37:13) 
-- CODE:
x=int(input("digite um numero: "))

n=0
while(x != 0):
	n=n+3
if(x > 0):
	mensagem("Abaixo")
else:
	print("Acima")
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    t=t+1
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:37:23) 
-- CODE:
x=int(input("digite um numero: "))

n=3
while(x != 0):
	n=n+3
if(x > 0):
	mensagem("Abaixo")
else:
	print("Acima")
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    t=t+1
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:37:29) 
-- CODE:
x=int(input("digite um numero: "))

n=3
while(x != 0):
	n=n+3
if(x > 0):
	mensagem("Abaixo")
else:
	print("Acima")
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    t=t+1
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:37:42) 
-- CODE:
x=int(input("digite um numero: "))

n=0
while(x != 0):
	n=n+3
if(x > 3):
	mensagem("Abaixo")
else:
	print("Acima")
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    t=t+1
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:37:48) 
-- CODE:
x=int(input("digite um numero: "))

n=0
while(x != 0):
	n=n+3
if(x > 3):
	mensagem("Abaixo")
else:
	print("Acima")
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    t=t+1
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:37:58) 
-- CODE:
x=int(input("digite um numero: "))

n=0
while(x != 0):
	n=n+3
if(x > 3):
	mensagem("Abaixo")
else:
	print("Acima")
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    t=t+1
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:38:09) 
-- CODE:
x=int(input("digite um numero: "))

n=0
while(x != 0):
	n=n+3
if(x > 3):
	mensagem("Abaixo")
else:
	print("Acima")
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    t=t+1
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:38:21) 
-- CODE:
x=int(input("digite um numero: "))

n=0
while(x != 3):
	n=n+1
if(x > 3):
	mensagem("Abaixo")
else:
	print("Acima")
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    t=t+1
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:38:27) 
-- CODE:
x=int(input("digite um numero: "))

n=0
while(x != 3):
	n=n+1
if(x > 3):
	mensagem("Abaixo")
else:
	print("Acima")
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    t=t+1
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:39:24) 
-- CODE:
x=int(input("digite um numero: "))

n=0
while(x != 0):
	n=n+1
if(x > 0):
	mensagem("Abaixo")
else:
	mensagem("Acima")
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    t=t+1
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:39:31) 
-- CODE:
x=int(input("digite um numero: "))

n=0
while(x != 0):
	n=n+1
if(x > 0):
	mensagem("Abaixo")
else:
	mensagem("Acima")
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    t=t+1
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:40:05) 
-- CODE:
x=int(input("digite um numero: "))

n=0
while(x != 0):
	n=n+1
if(x > 0):
	mensagem("Abaixo")
else:
	mensagem("Acima")
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    t=t+1
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:40:11) 
-- CODE:
x=int(input("digite um numero: "))

n=0
while(x != 0):
	n=n+1
if(x > 0):
	mensagem("Abaixo")
else:
	mensagem("Acima")
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    t=t+1
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:40:16) 
-- CODE:
x=int(input("digite um numero: "))

n=0
while(x != 0):
	n=n+1
if(x > 0):
	mensagem("Abaixo")
else:
	mensagem("Acima")
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    t=t+1
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:40:32) 
-- CODE:
x=int(input("digite um numero: "))

n=0
while(x != 0):
	n=n+1
if(x > 0):
	mensagem("Abaixo")
else:
	mensagem("Acima")
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    t=t+1
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:41:20) 
-- CODE:
x=int(input("digite um numero: "))

n=0
while(x != 0):
if(x > 0):
	mensagem("Abaixo")
else:
	mensagem("Acima")
print(n)
-- ERROR:
File "XXXX", line 5
    if(x > 0):
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:42:02) 
-- CODE:
x=int(input("digite um numero: "))
soma=3
n=0
while(x != 0):
	soma=soma+3
if(x > 0):
	mensagem("Abaixo")
else:
	mensagem("Acima")
print(n)
-- ERROR:
File "XXXX", line 5
    if(x > 0):
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:42:07) 
-- CODE:
x=int(input("digite um numero: "))
soma=3
n=0
while(x != 0):
	soma=soma+3
if(x > 0):
	mensagem("Abaixo")
else:
	mensagem("Acima")
print(n)
-- ERROR:
File "XXXX", line 5
    if(x > 0):
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:42:13) 
-- CODE:
x=int(input("digite um numero: "))
soma=3
n=0
while(x != 0):
	soma=soma+3
if(x > 0):
	mensagem("Abaixo")
else:
	mensagem("Acima")
print(n)
-- ERROR:
File "XXXX", line 5
    if(x > 0):
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:42:35) 
-- CODE:
x=int(input("digite um numero: "))
soma=3
n=0
while(x != 0):
	soma=soma+1
if(x > 0):
	mensagem("Abaixo")
else:
	mensagem("Acima")
print(n)
-- ERROR:
File "XXXX", line 5
    if(x > 0):
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:42:42) 
-- CODE:
x=int(input("digite um numero: "))
soma=3
n=0
while(x != 0):
	soma=soma+1
if(x > 0):
	mensagem("Abaixo")
else:
	mensagem("Acima")
print(n)
-- ERROR:
File "XXXX", line 5
    if(x > 0):
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:42:45) 
-- CODE:
x=int(input("digite um numero: "))
soma=3
n=0
while(x != 0):
	soma=soma+1
if(x > 0):
	mensagem("Abaixo")
else:
	mensagem("Acima")
print(n)
-- ERROR:
File "XXXX", line 5
    if(x > 0):
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:42:51) 
-- CODE:
x=int(input("digite um numero: "))
soma=3
n=0
while(x != 0):
	soma=soma+1
if(x > 0):
	mensagem("Abaixo")
else:
	mensagem("Acima")
print(n)
-- ERROR:
File "XXXX", line 5
    if(x > 0):
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:43:31) 
-- CODE:
x=int(input("digite um numero: "))
soma=3
n=0
while(x != 0):
	soma=soma+1
if(n > 0):
	print("Abaixo")
else:
	print("Acima")
print(n)
-- ERROR:
File "XXXX", line 5
    if(x > 0):
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:43:38) 
-- CODE:
x=int(input("digite um numero: "))
soma=3
n=0
while(x != 0):
	soma=soma+1
if(n > 0):
	print("Abaixo")
else:
	print("Acima")
print(n)
-- ERROR:
File "XXXX", line 5
    if(x > 0):
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 19:44:43) 
-- CODE:
x=int(input("digite um numero: "))

n=0
while(x != 3):
	n=n+1
if(x > 3):
	mensagem("Abaixo")
else:
	print("Acima")
print(n)
-- EXECUTION TIME:
367.551
-- TEST CASE 1:
---- input:
1
1
1
1
1
1
1
1
1
10
0
---- correct output:
19
Acima
---- user output:

-- TEST CASE 2:
---- input:
-1
-3
-5
-7
-9
0
---- correct output:
-25
Abaixo
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
30
20
-10
10
-20
-30
0
---- correct output:
0
Inicial
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 19:44:43) 
-- CODE:
x=int(input("digite um numero: "))
soma=3
n=0
while(x != 0):
	soma=soma+3
if(x > 0):
	mensagem("Abaixo")
else:
	mensagem("Acima")
print(n)
-- EXECUTION TIME:
137.846
-- TEST CASE 1:
---- input:
1
1
1
1
1
1
1
1
1
10
0
---- correct output:
19
Acima
---- user output:

-- TEST CASE 2:
---- input:
-1
-3
-5
-7
-9
0
---- correct output:
-25
Abaixo
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
30
20
-10
10
-20
-30
0
---- correct output:
0
Inicial
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 19:44:43) 
-- CODE:
x=int(input("digite um numero: "))
soma=3
n=0
while(x != 0):
	soma=soma+1
if(x > 0):
	mensagem("Abaixo")
else:
	mensagem("Acima")
print(n)
-- EXECUTION TIME:
122.933
-- TEST CASE 1:
---- input:
1
1
1
1
1
1
1
1
1
10
0
---- correct output:
19
Acima
---- user output:

-- TEST CASE 2:
---- input:
-1
-3
-5
-7
-9
0
---- correct output:
-25
Abaixo
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
30
20
-10
10
-20
-30
0
---- correct output:
0
Inicial
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 19:44:43) 
-- CODE:
x=int(input("digite um numero: "))
soma=3
n=0
while(x != 0):
	soma=soma+1
if(n > 0):
	print("Abaixo")
else:
	print("Acima")
print(n)
-- EXECUTION TIME:
58.9714
-- TEST CASE 1:
---- input:
1
1
1
1
1
1
1
1
1
10
0
---- correct output:
19
Acima
---- user output:

-- TEST CASE 2:
---- input:
-1
-3
-5
-7
-9
0
---- correct output:
-25
Abaixo
---- user output:

-- TEST CASE 3:
---- input:
30
20
-10
10
-20
-30
0
---- correct output:
0
Inicial
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
